2009-06-19:
===========

- demo1 now shows "loading, please wait..." when PaintWeb is loading.
- Fix for the PaintWeb library: keypress is not fired by Gecko in input 
elements, for the Up/Down arrows.
- Better shadows support detection - it determines properly that Firefox 3.0 
does not implement shadows.
- Better error handling for the initialization. In case of file not found, or 
such, the application will now display an error (failed to load ...), instead of 
failing silently.
- Buffer context initialization, which reads the configuration file and updates 
the context accordingly. This fixes previous inconsistencies.
- Users can press the Up/Down arrows in all inputs of type=number to 
increase/decrease the numeric value.
- Completed the GUI work needed for the Text tool tab.
- Completed the work on the Text tool itself. Just need to try workarounds for 
Opera and Firefox 3.0 compatibility.
- New configuration options for shadows and text.
- New English strings.

2009-06-18:
===========

- New "selectAll" command. Updated the selection tool accordingly.
- New keyboard shortcut: Control A, for "selectAll".
- Fixed multiple bugs related to the use of get/putImageData. I did some 
"stress" testing with images in excess of 5000 x 5000 pixels in Opera, Firefox 
and Safari on a Windows machine, Intel Core 2 Duo E6700, 8 GB RAM, 64 bits, etc.  
The results were quite interesting: the fastest was Firefox, albeit it is very 
slow when performing get/putImageData. It quickly throws "out of memory" 
exceptions. The bug fixes I did are for the main code and for the selection 
tool.
- Made numerous fixes for the selection tool - there were some cases which were 
spitting out exceptions, yay.
- Fixed image cropping issues + canvas rescaling, using the resize handle.
- Started to update the text tool for the new GUI. The layout is almost ready.  
The text tool code is almost done as well. The text tab CSS styling will come 
tomorrow.