@@ -1,6 +1,6 @@
 $Author: Mihai Şucan $
 $URL: http://code.google.com/p/paintweb $
-$Date: 2009-06-18 13:36:58 +0300 $
+$Date: 2009-06-20 22:10:21 +0300 $
 
 Until the end of GSOC:
 
@@ -26,6 +26,7 @@ which shows the image dimensions, where the user can crop and resize the image.
 - fully implement the notion of background color.
 - flip and rotate image.
 - maybe selection rotate.
+- maybe use .scale() and .translate() for selection manipulation.
 - tab reordering and grouping.
 
 Further down the road:
